# Schematic-Configurator

./: .gitignore  CMakeLists.txt  CustomRect.qml  GridBackground.qml  Main.qml  README.md  diagramdocument.h  main.cpp  shapeitem.h  shapemodel.cpp  shapemodel.h
